--- a/about.html
+++ b/about.html
@@ -1,5 +1,4 @@
 <!DOCTYPE HTML>
-
 <html lang="en">
 	<head>
 		<title>Tristan Bernardo | UI/UX Designer: About</title>
@@ -35,7 +34,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="gateway.html"><p>Peapod Gateway Page Redesign</p></a>
+							<a href="gateway.html"><p>Peapod Gateway Page</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
@@ -49,7 +48,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="help-section.html"><p>Peapod Help Section Redesign</p></a>
+							<a href="help-section.html"><p>Peapod Help Section</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
@@ -86,33 +85,38 @@
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
-				<!-- One -->
+				<!-- Bio -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<header>
 								<h1>Tristan Bernardo</h1>
 								<p>UI/UX Designer</p>
 							</header>
-							<p class="major"><span class="image left"><img src="images/about/tristan_bio.jpg" alt="Tristan Bernardo" /></span>Currently working as a UI/UX Designer for <a href="http://www.peapod.com" target="_blank">Peapod</a>, and finishing up my master's degree in Human-Computer Interaction, at <a href="http://www.cdm.depaul.edu/academics/Pages/MSInHuman-ComputerInteraction.aspx" target="blank">DePaul University</a>. I love working with smart energetic people. I believe in trying to get an understanding of a problem space, before jumping into a solution. I enjoy collaborating with others, and I often like to sit back and observe how others break down a problem.</p>
+
+							<img class="image left" src="images/about/tristan_bio.jpg" alt="Tristan Bernardo" />
+
 							<p class="major">
+								I recently relocated to southern California from Chicago, where I worked as a <strong>UI/UX Designer</strong> for <a href="http://www.swiftiq.com" target="_blank">SwiftIQ</a>, and <a href="http://www.peapod.com" target="_blank">Peapod</a> before that. I received my <a href="https://www.cdm.depaul.edu/academics/Pages/MSinHuman-ComputerInteraction.aspx" target="_blank">MS in Human-Computer Interaction</a> from <a href="https://www.depaul.edu/Pages/default.aspx" target="_blank">DePaul University</a>.
+							</p>
+							<blockquote>>
+								I believe in trying to get an understanding of a problem space, before jumping into a solution. I’m driven by working with smart energetic people. I enjoy collaborating with others, and I often like to observe how others attack a problem.
+							</blockquote>
 								<ul>
 									<li><strong>Interests:</strong> User-centered Design, Embodied Interaction, Cognitive Psychology
 									<li><strong>Influences:</strong> Don Norman, <i>Design of Everyday Things</i></li>
-									<li><strong>Background:</strong> Visual Design, Web/Print Design
+									<li><strong>Background:</strong> Visual Design, Web/Print Design, Mobile Design</li>
 								</ul>
-							</p>
-							
 						</div>
 						<div class="image">
 							<img src="images/cover-photo.jpg" alt="Image of sketches and notes." />
 						</div>
 					</section>
 
-				<!-- Two -->
+				<!-- Projects -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Communication &amp; Collaboration</h2>
-							<p>A huge part of my job depends on effectively communicating with others, be it presenting to stake holders, or collaborating with developers. I've been fortunate in my career to be part of great teams, and work with talented individuals, which has allowed me to improve my soft skills.</p>
+							<h2>Recent Projects</h2>
+							<p>I've been fortunate in my career to be part of great teams and work on interesting projects. Here is a selection of a few of my work samples from recent projects:</p>
 						</div>
 
 						<!-- Gallery -->
@@ -166,13 +170,98 @@
 									</div>
 								</article>
 							</div>
-
 					</section>
 
-				<!-- Three -->
+				<!-- Methodology -->
+					<section class="wrapper style1 align-center">
+						<div class="inner">
+							<h2>Methodology</h2>
+							<p>As a Human-Computer Interaction (HCI) practitioner I rely upon a system of methods for investigating new problem spaces, validating design decisions, and testing for usability issues. Here is a collection of methods I've used on my projects:</p>
+							<div class="items style1 medium onscroll-fade-in">
+								<section>
+									<span class="icon style2 major fa-object-ungroup"></span>
+									<h3>Wireframing</h3>
+									<p>Useful in ideating new features or systems.</p>
+								</section>
+								<section>
+									<span class="icon style2 major fa-object-group"></span>
+									<h3>Prototyping</h3>
+									<p>Used for user testing as well as communicate designs with developers.</p>
+								</section>
+								<section>
+									<span class="icon style2 major fa-user"></span>
+									<h3>User Testing</h3>
+									<p>Crucial element of UX Design used for uncovering usability issues &amp; collect qualitative and quantitative data.</p>
+								</section>
+								<section>
+									<span class="icon style2 major fa-comments-o"></span>
+									<h3>Interviews</h3>
+									<p>Helpful for finding out users goals, needs, and pain-points.</p>
+								</section>
+								<section>
+									<span class="icon style2 major fa-search"></span>
+									<h3>Contextual Inquiry</h3>
+									<p>Valuable tool for learning about users in their natural settings and gain new insights.</p>
+								</section>
+								<section>
+									<span class="icon style2 major fa-group"></span>
+									<h3>Observations</h3>
+									<p>Useful for gaining insights into a new domain &amp; learning user behavior.</p>
+								</section>
+								<section>
+									<span class="icon style2 major fa-desktop"></span>
+									<h3>Heuristic &amp; Accessibility Evaluations</h3>
+									<p>Used to quickly finding usability &amp; accessibility issue by following accepted guidelines.</p>
+								</section>
+								<section>
+									<span class="icon style2 major  fa-copy"></span>
+									<h3>Competitive Analysis</h3>
+									<p>Process of analyzing competitors in a particular domain, to learn how they handle common design problems.</p>
+								</section>
+								<section>
+									<span class="icon style2 major fa-pencil-square-o"></span>
+									<h3>Storyboarding</h3>
+									<p>Visual tool for conceptualizing a design solution through storytelling, using quick sketches.</p>
+								</section>
+								<section>
+									<span class="icon style2 major fa-th"></span>
+									<h3>Card Sorting</h3>
+									<p>Conducted on-line or in person to design an information architecture, and menu structures.</p>
+								</section>
+								<section>
+									<span class="icon style2 major fa-map-o"></span>
+									<h3>Journey Mapping</h3>
+									<p>Used to plot out an ideal user's experience &amp; visualize pain-points and opportunities for improvement.</p>
+								</section>
+								<section>
+									<span class="icon style2 major fa-sitemap"></span>
+									<h3>Affinity Diagramming</h3>
+									<p>Process of grouping insights into themes to gain understanding of a particular domain &amp; generate requirements such as "user stories".</p>
+								</section>
+								<section>
+									<span class="icon style2 major  fa-pencil"></span>
+									<h3>Sketching</h3>
+									<p>Quick and easy way to generate initial design ideas. Good for rapid iteration.</p>
+								</section>
+								<section>
+									<span class="icon style2 major fa-pie-chart"></span>
+									<h3>Surveys</h3>
+									<p>Used to collect qualitative &amp; quantitative data. Can be distributed to a very large set of users, so statistical significance can be achieved.</p>
+								</section>
+								<section>
+									<span class="icon style2 major fa-book"></span>
+									<h3>Literature Review</h3>
+									<p>Valuable way to save time by tapping into existing knowledge gained from previous studies.</p>
+								</section>
+							</div>
+						</div>
+					</section>
+
+				<!-- Email Form -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
-							<h2>Get in touch</h2>
+							<h2>Get in Touch</h2>
+							<p>Feel free to reach out to me regarding work opportunities. You may also find me on <a href="https://www.linkedin.com/in/tkbernardo/" target="_blank">LinkedIn</a>.</p>
 							<form method="post" action="//formspree.io/tkbernardo@gmail.com">
 								<div class="field half first">
 									<label for="name">Name</label>
@@ -187,7 +276,7 @@
 									<textarea name="message" id="message" rows="6"></textarea>
 								</div>
 								<ul class="actions">
-									<li><input type="submit" name="submit" id="submit" value="Send Message" /></li>
+									<li><input type="submit" name="submit" id="submit" value="Send Message" class="big wide" /></li>
 								</ul>
 							</form>
 
@@ -198,10 +287,10 @@
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="http://www.linkedin.com/in/tkbdesign" target="_blank" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.linkedin.com/in/tkbernardo/" target="_blank" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="mailto:tkbernardo@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
-							<p>Copyright &copy; 2017 Tristan Bernardo</p>
+							<p>Copyright &copy; 2018 Tristan Bernardo</p>
 						</div>
 					</footer>
 
