--- a/gateway.html
+++ b/gateway.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 	<head>
-		<title>Tristan Bernardo | UI/UX Designer: About</title>
+		<title>Tristan Bernardo | UI/UX Designer: Peapod Gateway Page Redesign</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -35,7 +35,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="gateway.html"><p>Peapod Gateway Page Redesign</p></a>
+							<a href="gateway.html"><p>Peapod Gateway Page</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
@@ -49,7 +49,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="help-section.html"><p>Peapod Help Section Redesign</p></a>
+							<a href="help-section.html"><p>Peapod Help Section</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
@@ -90,15 +90,15 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<header>
-								<h1>Tristan Bernardo</h1>
-								<p>UI/UX Designer</p>
+								<h1>Peapod Gateway Page</h1>
+								<p>Design &amp; Research</p>
 							</header>
-							<p class="major"><span class="image left"><img src="images/about/tristan_bio.jpg" alt="Tristan Bernardo" /></span>Currently working as a UI/UX Designer for <a href="http://www.peapod.com" target="_blank">Peapod</a>, and finishing up my master's degree in Human-Computer Interaction, at <a href="http://www.cdm.depaul.edu/academics/Pages/MSInHuman-ComputerInteraction.aspx" target="blank">DePaul University</a>. I love working with smart energetic people. I believe in understanding a problem space, before jumping into a solution. I enjoy collaborating with others, and I often like to sit back and observe how others break down a problem.</p>
+							<p class="major">As part of a complete overhaul of the Peapod website, I designed a new responsive Gateway page which resulted in reducing the bounce rate by 30%.</p>
 							<p class="major">
 								<ul>
-									<li><strong>Interests:</strong> User-centered Design, Embodied Interaction, Cognitive Psychology
-									<li><strong>Influences:</strong> Don Norman, <i>Design of Everyday Things</i></li>
-									<li><strong>Background:</strong> Visual Design, Web/Print Design
+									<li><strong>Role:</strong> UI/UX Designer
+									<li><strong>Deliverable:</strong> Responsive gateway page</li>
+									<li><strong>Methods:</strong> Heuristic Evaluation, 
 								</ul>
 							</p>
 							
