--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE HTML>
-
 <html lang="en">
 	<head>
 		<title>Tristan Bernardo | UI/UX Designer</title>
@@ -35,7 +34,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="gateway.html"><p>Peapod Gateway Page Redesign</p></a>
+							<a href="gateway.html"><p>Peapod Gateway Page</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
@@ -49,7 +48,7 @@
 									</ul>
 								</div>
 							</article>
-							<a href="help-section.html"><p>Peapod Help Section Redesign</p></a>
+							<a href="help-section.html"><p>Peapod Help Section</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
@@ -86,7 +85,7 @@
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
-				<!-- One -->
+				<!-- Intro -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<header>
@@ -103,13 +102,13 @@
 						</div>
 					</section>
 
-				<!-- Two -->
+				<!-- Peapod Gateway -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Peapod Gateway Page Redesign</h2>
+							<h2>Peapod Gateway Page</h2>
 							<p>As part of a complete overhaul of the Peapod website, I designed a new responsive Gateway page which resulted in reducing the bounce rate by 30%.</p>
 							<ul class="actions vertical">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="gateway.html" class="button big wide">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -117,13 +116,13 @@
 						</div>
 					</section>
 
-				<!-- Three -->
+				<!-- Peapod Help Section -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Peapod Help Section Redesign</h2>
+							<h2>Peapod Help Section</h2>
 							<p>With the redesign of the Peapod website, the existing Help section became outdated. This presented the opportunity for me to consolidate articles and construct a new, optimal information architecture.</p>
 							<ul class="actions vertical">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="help-section.html" class="button big wide">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -131,13 +130,13 @@
 						</div>
 					</section>
 
-				<!-- Four -->
+				<!-- Ice-Burg -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Ice-Burg Project</h2>
-							<p>I was part of a team that created an interactive art installation, that responds to proximity and touch by engaging the user with music and lights.</p>
+							<p>I was part of a team that won a grant to created an interactive art installation, that responds to proximity and touch by engaging the user with music and lights.</p>
 							<ul class="actions vertical">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="ice-burg.html" class="button big wide">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -145,13 +144,13 @@
 						</div>
 					</section>
 
-				<!-- Five -->
+				<!-- Shedd Aquarium -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Shedd Aquarium Accessibility</h2>
 							<p>Currently most museums do not design their exhibits to accommodate visitors with disabilities, particularly those with visual impairments. I was part of a team that investigated this problem space, and provided recommendations for improvement to the Shedd Aquarium in Chicago.</p>
 							<ul class="actions vertical">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="shedd-aquarium.html" class="button big wide">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -159,95 +158,11 @@
 						</div>
 					</section>
 
-				<!-- Six -->
-					<section class="wrapper style1 align-center">
-						<div class="inner">
-							<h2>Methodology</h2>
-							<p>As a Human-Computer Interaction (HCI) practitioner I rely upon a system of methods for investigating new problem spaces, validating design decisions, and testing for usability issues. Here is a collection of methods I've used on my projects:</p>
-							<div class="items style1 medium onscroll-fade-in">
-								<section>
-									<span class="icon style2 major fa-object-ungroup"></span>
-									<h3>Wireframing</h3>
-									<p>Useful in ideating new features or systems. Used to communicate early, low-fi design of layout and structure.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-object-group"></span>
-									<h3>Prototyping</h3>
-									<p>Paper prototypes are a low cost way to test for usability issues, while hi-fi interactive prototypes are useful for testing as well as communicating with developers.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-user"></span>
-									<h3>User Testing</h3>
-									<p>Crucial element of UX Design for uncovering usability issues, as well as a means to collect qualitative and quantitative data.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-comments-o"></span>
-									<h3>Interviews</h3>
-									<p>Helpful for finding out how users goals, needs, and pain-points, as well as how they interact with a system.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-search"></span>
-									<h3>Contextual Inquiry</h3>
-									<p>Valuable tool for learning about users in their natural settings. Can gain completely new insights which were not previously thought about.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-group"></span>
-									<h3>Observations</h3>
-									<p>Useful for gaining insights into a new domain. Can collect a large volume of data, unbiased by the Hawthorne effect.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-desktop"></span>
-									<h3>Heuristic Evaluation</h3>
-									<p>Guidelines, popularized by Jakob Nielsen among others, which are useful in finding usability and accessibility issues.</p>
-								</section>
-								<section>
-									<span class="icon style2 major  fa-copy"></span>
-									<h3>Competitive Analysis</h3>
-									<p>Process of analyzing competitors in a particular domain, to learn how they handle common design problems.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-pencil-square-o"></span>
-									<h3>Storyboarding</h3>
-									<p>Visual tool for conceptualizing a design solution through storytelling, using quick sketches.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-th"></span>
-									<h3>Card Sorting</h3>
-									<p>Technique, which can be conducted on-line or in person, for creating understandable groupings of information. Useful in designing an information architecture, and menu structures.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-map-o"></span>
-									<h3>Journey Mapping</h3>
-									<p>Used to plot out an ideal user's experience using a service or a system. Good for visualizing pain-points and opportunities for improvement of the user experience.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-sitemap"></span>
-									<h3>Affinity Diagramming</h3>
-									<p>Process of grouping insights from observations into insight clusters, to gain a understanding of a particular domain. Useful for generating User Stories.</p>
-								</section>
-								<section>
-									<span class="icon style2 major  fa-pencil"></span>
-									<h3>Sketching</h3>
-									<p>Quick and easy way to generate initial design ideas. Very low cost, and can be easily discarded.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-pie-chart"></span>
-									<h3>Surveys</h3>
-									<p>Method of collecting qualitative and quantitative data from a desired set of users. Can be distributed to a very large set of users, so statistical significance can be achieved.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-book"></span>
-									<h3>Literature Review</h3>
-									<p>Valuable way to tap into existing knowledge gained from previous studies. An efficient strategy for gaining insights, and may alleviate the need to conduct a new study.</p>
-								</section>
-							</div>
-						</div>
-					</section>
-
-				<!-- Seven -->
+				<!-- Email Form -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
-							<h2>Get in touch</h2>
+							<h2>Get in Touch</h2>
+							<p>Feel free to reach out to me regarding work opportunities. You may also find me on <a href="https://www.linkedin.com/in/tkbernardo/" target="_blank">LinkedIn</a>.</p>
 							<form method="post" action="//formspree.io/tkbernardo@gmail.com">
 								<div class="field half first">
 									<label for="name">Name</label>
@@ -262,7 +177,7 @@
 									<textarea name="message" id="message" rows="6"></textarea>
 								</div>
 								<ul class="actions">
-									<li><input type="submit" name="submit" id="submit" value="Send Message" /></li>
+									<li><input type="submit" name="submit" id="submit" value="Send Message" class="big wide" /></li>
 								</ul>
 							</form>
 
@@ -273,10 +188,10 @@
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="http://www.linkedin.com/in/tkbdesign" target="_blank" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.linkedin.com/in/tkbernardo/" target="_blank" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="mailto:tkbernardo@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
-							<p>Copyright &copy; 2017 Tristan Bernardo</p>
+							<p>Copyright &copy; 2018 Tristan Bernardo</p>
 						</div>
 					</footer>
 
