--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 						<div class="nav-project-container">
 							<article>
 								<a href="gateway.html" class="image">
-									<img src="images/gateway/gateway-mobile.jpg" alt="Image of Peapod Gateway on a mobile device" />
+									<img src="images/gateway-mobile-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" />
 								</a>
 								<div class="caption">
 									<p>Redesigned Peapod Gateway page for desktop and mobile.</p>
@@ -39,7 +39,7 @@
 						<div class="nav-project-container">	
 							<article>
 								<a href="help-section.html" class="image">
-									<img src="images/help-section/help-section-desktop.jpg" alt="Image of Peapod Help Secion on desktop" />
+									<img src="images/help-section-desktop-1440x900.jpg" alt="Image of Peapod Help Secion on desktop" />
 								</a>
 								<div class="caption">
 									<p>Created new information architecture for Peapod Help section.</p>
@@ -53,7 +53,7 @@
 						<div class="nav-project-container">	
 							<article>
 								<a href="ice-burg.html" class="image">
-									<img src="images/ice-burg/touching-ice-burg.jpg" alt="Image of girl touching illuminated sculpture" />
+									<img src="images/touching-ice-burg-1440x900.jpg" alt="Image of girl touching illuminated sculpture" />
 								</a>
 								<div class="caption">
 									<p>Helped create interactive art installation that responds to proximity and touch.</p>
@@ -67,7 +67,7 @@
 						<div class="nav-project-container">	
 							<article>
 								<a href="shedd-aquarium.html" class="image">
-									<img src="images/shedd-aquarium/tactile-otter.jpg" alt="Image of participant touching a tactile exhibit at the Shedd Aquarium" />
+									<img src="images/tactile-otter-1440x900.jpg" alt="Image of participant who is visually impared touching a tactile exhibit at the Shedd Aquarium" />
 								</a>
 								<div class="caption">
 									<p>Helped provide recommendations to Shedd Aquarium for improving exhibit accessiblity.</p>
@@ -108,7 +108,7 @@
 								</ul>
 						</div>
 						<div class="image">
-							<img src="images/cover-photo.jpg" alt="Image of sketches and notes." />
+							<img src="images/cover-photo-1440x900.jpg" alt="Image of sketches and notes." />
 						</div>
 					</section>
 
@@ -116,7 +116,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Recent Projects</h2>
-							<p>I've been fortunate in my career to be part of great teams and work on interesting projects. Here is a selection of a few of my work samples from recent projects:</p>
+							<p>I've been fortunate in my career to be part of great teams and work on interesting projects. Here is a selection of a few of my work samples:</p>
 						</div>
 
 						<!-- Gallery -->
@@ -176,7 +176,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Methodology</h2>
-							<p>As a Human-Computer Interaction (HCI) practitioner I rely upon a system of methods for investigating new problem spaces, validating design decisions, and testing for usability issues. Here is a collection of methods I've used on my projects:</p>
+							<p>As a Human-Computer Interaction (HCI) practitioner I rely upon a system of methods for investigating new problem spaces, validating design decisions, and testing for usability issues. These methods include:</p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon style2 major fa-object-ungroup"></span>
