--- a/gateway.html
+++ b/gateway.html
@@ -26,7 +26,7 @@
 						<div class="nav-project-container">
 							<article>
 								<a href="gateway.html" class="image">
-									<img src="images/gateway/gateway-mobile.jpg" alt="Image of Peapod Gateway on a mobile device" />
+									<img src="images/gateway-mobile-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" />
 								</a>
 								<div class="caption">
 									<p>Redesigned Peapod Gateway page for desktop and mobile.</p>
@@ -40,7 +40,7 @@
 						<div class="nav-project-container">	
 							<article>
 								<a href="help-section.html" class="image">
-									<img src="images/help-section/help-section-desktop.jpg" alt="Image of Peapod Help Secion on desktop" />
+									<img src="images/help-section-desktop-1440x900.jpg" alt="Image of Peapod Help Secion on desktop" />
 								</a>
 								<div class="caption">
 									<p>Created new information architecture for Peapod Help section.</p>
@@ -54,7 +54,7 @@
 						<div class="nav-project-container">	
 							<article>
 								<a href="ice-burg.html" class="image">
-									<img src="images/ice-burg/touching-ice-burg.jpg" alt="Image of girl touching illuminated sculpture" />
+									<img src="images/touching-ice-burg-1440x900.jpg" alt="Image of girl touching illuminated sculpture" />
 								</a>
 								<div class="caption">
 									<p>Helped create interactive art installation that responds to proximity and touch.</p>
@@ -68,7 +68,7 @@
 						<div class="nav-project-container">	
 							<article>
 								<a href="shedd-aquarium.html" class="image">
-									<img src="images/shedd-aquarium/tactile-otter.jpg" alt="Image of participant touching a tactile exhibit at the Shedd Aquarium" />
+									<img src="images/tactile-otter-1440x900.jpg" alt="Image of participant who is visually impared touching a tactile exhibit at the Shedd Aquarium" />
 								</a>
 								<div class="caption">
 									<p>Helped provide recommendations to Shedd Aquarium for improving exhibit accessiblity.</p>
@@ -93,6 +93,7 @@
 								<h1>Peapod Gateway Page</h1>
 								<p>Design &amp; Research</p>
 							</header>
+								<span class="fit inner"><img src="images/gateway-mobile-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" /></span>
 							<p class="major">As part of a complete overhaul of the Peapod website, I designed a new responsive Gateway page which resulted in reducing the bounce rate by 30%.</p>
 							<p class="major">
 								<ul>
@@ -102,9 +103,6 @@
 								</ul>
 							</p>
 							
-						</div>
-						<div class="image">
-							<img src="images/cover-photo.jpg" alt="Image of sketches and notes." />
 						</div>
 					</section>
 
@@ -187,7 +185,7 @@
 									<textarea name="message" id="message" rows="6"></textarea>
 								</div>
 								<ul class="actions">
-									<li><input type="submit" name="submit" id="submit" value="Send Message" /></li>
+									<li><input type="submit" name="submit" id="submit" value="Send Message" class="big wide" /></li>
 								</ul>
 							</form>
 
