--- a/shedd-aquarium.html
+++ b/shedd-aquarium.html
@@ -26,7 +26,7 @@
 						<div class="nav-project-container">
 							<article>
 								<a href="gateway.html" class="image">
-									<img src="images/gateway/gateway-mobile.jpg" alt="Image of Peapod Gateway on a mobile device" />
+									<img src="images/gateway-mobile-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" />
 								</a>
 								<div class="caption">
 									<p>Redesigned Peapod Gateway page for desktop and mobile.</p>
@@ -35,12 +35,12 @@
 									</ul>
 								</div>
 							</article>
-							<a href="gateway.html"><p>Peapod Gateway Page Redesign</p></a>
+							<a href="gateway.html"><p>Peapod Gateway Page</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
 								<a href="help-section.html" class="image">
-									<img src="images/help-section/help-section-desktop.jpg" alt="Image of Peapod Help Secion on desktop" />
+									<img src="images/help-section-desktop-1440x900.jpg" alt="Image of Peapod Help Secion on desktop" />
 								</a>
 								<div class="caption">
 									<p>Created new information architecture for Peapod Help section.</p>
@@ -49,12 +49,12 @@
 									</ul>
 								</div>
 							</article>
-							<a href="help-section.html"><p>Peapod Help Section Redesign</p></a>
+							<a href="help-section.html"><p>Peapod Help Section</p></a>
 						</div>
 						<div class="nav-project-container">	
 							<article>
 								<a href="ice-burg.html" class="image">
-									<img src="images/ice-burg/touching-ice-burg.jpg" alt="Image of girl touching illuminated sculpture" />
+									<img src="images/touching-ice-burg-1440x900.jpg" alt="Image of girl touching illuminated sculpture" />
 								</a>
 								<div class="caption">
 									<p>Helped create interactive art installation that responds to proximity and touch.</p>
@@ -68,7 +68,7 @@
 						<div class="nav-project-container">	
 							<article>
 								<a href="shedd-aquarium.html" class="image">
-									<img src="images/shedd-aquarium/tactile-otter.jpg" alt="Image of participant touching a tactile exhibit at the Shedd Aquarium" />
+									<img src="images/tactile-otter-1440x900.jpg" alt="Image of participant who is visually impared touching a tactile exhibit at the Shedd Aquarium" />
 								</a>
 								<div class="caption">
 									<p>Helped provide recommendations to Shedd Aquarium for improving exhibit accessiblity.</p>
