updated layout on gateway page

--- a/gateway.html
+++ b/gateway.html
@@ -86,6 +86,36 @@
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
+					<section class="wrapper style1 align-center">
+						<div class="inner">
+							<div class="index align-left">
+
+								<!-- Images -->
+									<section>
+										<div class="content">
+											<header>
+												<h1>Peapod Gateway Page</h1>
+												<p>Design &amp; Research</p>
+											</header>
+											<span class="image fit"><img src="images/gateway-mobile-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" /></span>
+
+											<p>As part of a complete overhaul of the Peapod website, I designed a new responsive Gateway page which resulted in reducing the bounce rate by 30%.</p>
+
+											<ul>
+												<li><strong>Role:</strong> UI/UX Designer
+												<li><strong>Deliverable:</strong> Responsive gateway page</li>
+												<li><strong>Methods:</strong> Heuristic Evaluation, 
+											</ul>
+
+										</div>
+									</section>
+
+							</div>
+
+
+						</div>
+					</section>
+
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
