updated layout on gateway page

--- a/gateway.html
+++ b/gateway.html
@@ -87,7 +87,7 @@
 			<div id="wrapper" class="divided">
 
 					<section class="wrapper style1 align-center">
-						<div class="inner">
+						<div class="inner medium">
 							<div class="index align-left">
 
 								<!-- Images -->
@@ -98,6 +98,8 @@
 												<p>Design &amp; Research</p>
 											</header>
 											<span class="image fit"><img src="images/gateway-mobile-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" /></span>
+
+											<h2>Summary</h2>
 
 											<p>As part of a complete overhaul of the Peapod website, I designed a new responsive Gateway page which resulted in reducing the bounce rate by 30%.</p>
 
