About and Gateway Fixes
- Removed left/right padding in header
- Left-aligned content and fixed image height issue in About page
- Added fade animation to Gateway first content

--- a/about.html
+++ b/about.html
@@ -93,12 +93,10 @@
 								<p>UI/UX Designer</p>
 							</header>
 
-							<img class="image left" src="images/about/tristan_bio.jpg" alt="Tristan Bernardo" />
-
-							<p class="major">
+							<p class="major"><img class="image-bio left" src="images/about/tristan_bio.jpg" alt="Tristan Bernardo" />
 								I recently relocated to southern California from Chicago, where I worked as a <strong>UI/UX Designer</strong> for <a href="http://www.swiftiq.com" target="_blank">SwiftIQ</a>, and <a href="http://www.peapod.com" target="_blank">Peapod</a> before that. I received my <a href="https://www.cdm.depaul.edu/academics/Pages/MSinHuman-ComputerInteraction.aspx" target="_blank">MS in Human-Computer Interaction</a> from <a href="https://www.depaul.edu/Pages/default.aspx" target="_blank">DePaul University</a>.
 							</p>
-							<blockquote>>
+							<blockquote>
 								I believe in trying to get an understanding of a problem space, before jumping into a solution. I’m driven by working with smart energetic people. I enjoy collaborating with others, and I often like to observe how others attack a problem.
 							</blockquote>
 								<ul>
