--- a/gateway.html
+++ b/gateway.html
@@ -91,7 +91,7 @@
 							<div class="index align-left">
 
 								<!-- Images -->
-									<section>
+									<section class="banner onload-content-fade-right">
 										<div class="content">
 											<header>
 												<h1>Peapod Gateway Page</h1>
@@ -119,7 +119,7 @@
 					</section>
 
 				<!-- One -->
-					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-content-fade-right">
 						<div class="content">
 							<header>
 								<h1>Peapod Gateway Page</h1>
