--- a/gateway.html
+++ b/gateway.html
@@ -90,7 +90,7 @@
 						<div class="inner medium">
 							<div class="index align-left">
 
-								<!-- Images -->
+								<!-- Summary -->
 									<section class="banner onload-content-fade-right">
 										<div class="content">
 											<header>
@@ -117,33 +117,6 @@
 
 						</div>
 					</section>
-
-				<!-- One -->
-					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-content-fade-right">
-						<div class="content">
-							<header>
-								<h1>Peapod Gateway Page</h1>
-								<p>Design &amp; Research</p>
-							</header>
-								<span class="fit inner"><img src="images/gateway-mobile-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" /></span>
-							<p class="major">As part of a complete overhaul of the Peapod website, I designed a new responsive Gateway page which resulted in reducing the bounce rate by 30%.</p>
-							<p class="major">
-								<ul>
-									<li><strong>Role:</strong> UI/UX Designer
-									<li><strong>Deliverable:</strong> Responsive gateway page</li>
-									<li><strong>Methods:</strong> Heuristic Evaluation, 
-								</ul>
-							</p>
-							
-						</div>
-					</section>
-
-				<!-- Two -->
-					<section class="wrapper style1 align-center">
-						<div class="inner">
-							<h2>Communication &amp; Collaboration</h2>
-							<p>A huge part of my job depends on effectively communicating with others, be it presenting to stake holders, or collaborating with developers. I've been fortunate to be part of great teams, and work with talented individuals.</p>
-						</div>
 
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
